2012-10-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb: Use rb_thread_call_without_gvl only when
	    ruby/thread.h exists. rb_thread_call_without_gvl is an internal
	    function in ruby 1.9.2 and 1.9.3.
	* ext/oci8/oci8lib.c: fix compilation errors when ruby <= 1.9.1.
	* setup.rb: fix uninitialized constant Config (NameError) on ruby 1.8.7.

2012-10-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c, ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/oci8lib.c:
	    Fix SEGV when a temporary LOB is GCed while another LOB is read.
	    (github issue #20 reported by techsplicer)

2012-10-02  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.c.tmpl, ext/oci8/connection_pool.c, ext/oci8/env.c,
	  ext/oci8/extconf.rb, ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/oci8lib.c,
	  ext/oci8/thread_util.c, ext/oci8/thread_util.h:
	    replace rb_thread_blocking_region(), which is deprecated in ruby 2.0.0,
	    with rb_thread_call_without_gvl() and rename oci8_blocking_region()
	    to oci8_call_without_gvl().
	* lib/oci8.rb.in: Ruby 2.0.0-dev's API version is changed to 2.0.0.
	* setup.rb: use RbConfig instead of Config for ruby 2.0.0-dev.

2012-08-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/stmt.c, lib/oci8/cursor.rb: revise yard comment.

2012-08-11  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/stmt.c, lib/oci8/cursor.rb: refactor OCI8::Cursor to simplify
	    C code.
	* ext/oci8/bind.c: add a private function OCI8::BindType::Base#get_data
	    and #set_data.
	* ext/oci8/attr.c, ext/oci8/oci8.h, ext/oci8/oci8lib.c: delete
	    unused functions and a unused variable.

2012-08-11  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in, lib/oci8/cursor.rb, lib/oci8/oci8.rb:
	    move OCI8::Cursor from lib/oci8/oci8.rb to lib/oci8/cursor.rb.

2012-08-05  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/object.rb: Change the ruby type which corresponds to
	    Oracle object type's DATE field from DateTime to Time.
	* test/setup_test_object.sql, test/test_object.rb: